feat: 查询优化——子查询拆分、多查询与 HyDE
检索链路里最影响召回的其实是"把问题交给检索器之前做什么"。此前查询优
化全部发生在第一次检索之后：首轮永远拿原始问题去检索，planner 要等首
轮出了证据、用户授过权才能改写检索词。而首轮恰恰拿走
INITIAL_CITATIONS=6 条证据，占引用配额的大头。

多facet问题受害最深。"数据库连接池怎么配置？Redis 过期策略是什么？"整
体做 embedding，会把两个不相关的主题平均成一个哪边都不挨着的点。

按"授权前不得发起远程调用"这条既有约束分两层落地：本地确定性的子查询
拆分放首轮，需要模型参与的多查询与 HyDE 放已授权的 planner 轮。

本地层（首轮，不调模型）：
- QueryDecomposer 按句末标点与"以及/还有/另外"等连接词拆分，偏向不拆。
  单facet问题原样返回单条：漏拆只是少一次改进，误拆会把一个问题碎成几
  个都检索不到的片段。逗号不作为边界，"重试、超时和降级的配置"是一个
  主题的枚举而非三个问题
- QueryFusion 把各子查询的结果轮转交错合并
- SemanticSearchEngine 新增 searchContext(List, int, String, 策略) 重载，
  先融合再统一过一次 ContextSelector，MMR 因此看到的是全局池

planner 层（已授权）：
- RetrievalDecision 的查询携带 QueryMode：KEYWORD 走混合检索，
  HYPOTHETICAL 是 HyDE 伪文档，只走向量分支——一段编造的散文喂给 BM25
  只会匹配它自己的虚词
- 系统提示词说明两种模式；readQueries 同时接受
  [{"text":…,"mode":…}]、["…"] 与单个 "query" 三种形态，旧格式一律解析
  成 KEYWORD，行为不变
- RetrievalPlanRequest 带上 semanticRetrievalAvailable，没有向量模型时
  直接告诉模型别生成注定无用的伪文档

为什么是轮转交错而不是 RRF：
RRF 回答的是"多个检索器看同一个查询，它们认同哪些结果"，认同本身是信
号。子查询是不同的问题，认同不是信号，且分数跨 facet 不可比——"怎么配
置"匹配半个语料库，它的第一名不值强 facet 的第一名。多facet探针上 RRF
让 deployment-linux.md 挤掉了 database-connection.md，Recall@5 从
0.917 掉到 0.750；限制每路参与深度、再混入归一化原始分，都只是在挪动
问题。改成每个 facet 每轮各占一个槽位、重复命中跳过并前进之后，
Recall@5 升到 1.000，nDCG@10 从 0.892 升到 0.936。

其它：
- 查询 embedding 缓存从单槽改为 16 槽 LRU。单槽按 semanticText 精确匹
  配，一轮里跑 N 个不同查询时命中率为 0；并在 index()/restore() 时清空，
  此前换 embedding 模型会继续发旧模型的向量
- PLANNER_MAX_TOKENS 200 → 512 以容纳伪文档。这是上限不是预留，短决策
  仍按实际计费；若实测频繁 finish_reason=="length" 需再上调
- 无向量模型时 HyDE 走 DENSE 会静默返回 0 条（directDense 拿到空列表，
  无报错无日志），AskUseCase 显式降级为混合检索并记诊断，不重蹈
  e3b5131 刚修过的静默降级

不动的部分：search() 与搜索标签页保持字面检索。它同时是 45 例质量门禁
的度量入口，保持不变才能充当对照组。

验证：mvn test 149 项通过（原 125 + 新增 24），含 ArchUnit 10 条分层约
束；build-and-test.cmd 真实 ONNX 全量门禁退出码 0，45 例基线
Recall@5=1.000 MRR@10=1.000 nDCG@10=0.956 未退步。RetrievalEvaluator
增加 QUERY_OPTIMIZATION 消融行，与其余四种策略并列输出。注意基线 45 例
中没有多facet查询，该行在基线上只能证明零回归；上述增益是用临时探针数
据集（6 例多facet，验证后已删除）测得的，若要让增益长期受门禁保护，需
往 retrieval-baseline.json 补多facet测例。